# MyPortfolio

./: ._env.local  .env.production  .env.production.example  .gitignore  .vercelignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  LICENSE  PHASE1_SECURITY_FIXES_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  QUICK_DEPLOY_CHECKLIST.md  QUICK_START.md  README.md  SECURITY.md  SECURITY_AUDIT_2026-05-09.md  SECURITY_INCIDENT_REPORT.md  SECURITY_SUMMARY.md  VISITOR_TRACKING_GUIDE.md  deployment.py  docker-compose.prod.yml  docker-compose.yml  package.json  requirements.txt  vercel.json
backend/: .dockerignore  .env.example  .gitignore  .vercelignore  ANALYTICS.md  DEPLOYMENT.md  Dockerfile  SECURITY.md  START_GUIDE.md  alembic.ini  deploy.sh  docker-compose.yml  migrate_to_r2.py  pyproject.toml  pytest.ini  requirements.txt  setup-ssl.sh  start-docker.sh
backend/.github/workflows/: production.yml  staging.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_coursework.py  003_rename_coursework_display_order.py  9956fd4172ea_add_gallery_status_and_published_at.py  b92623584324_add_visitor_tracking.py  fbf2847a5a6d_add_gallery_tables.py
backend/api/: index.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  (+4 more)
backend/nginx/: nginx.conf
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_auth.py  test_articles_crud.py  test_config_breaking_changes.py  test_dashboard_stats.py  test_gallery_upload.py  test_health.py  test_performance.py  test_security_headers.py
(+222 files in other folders)
