[project]
name = "portfolio-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.25",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    "python-slugify==8.0.1",
    "python-dotenv==1.0.0",
    "Pillow==11.0.0",
    "psutil==5.9.8",
    "slowapi==0.1.9",
    "redis==5.0.1",
    "loguru==0.7.2",
    "sentry-sdk[fastapi]>=2.20.0",
    "feedgen==1.0.0",
    "markdown==3.5.2",
    "Pygments==2.17.2",
    "boto3==1.34.51",
]

[tool.vercel]
entrypoint = "api.index:app"
